[gd_scene load_steps=2 format=3 uid="uid://c40ltgcaeira6"]

[ext_resource type="Script" uid="uid://c57qq2yrl8703" path="res://Scripts/ui.gd" id="1_jxero"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_jxero")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(940, 100)
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 110.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(920, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 60
alignment = 1

[node name="LevelBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="Panel/HBoxContainer/LevelBoxContainer"]
layout_mode = 2
text = "LEVEL: "

[node name="MoneyBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MoneyLabel" type="Label" parent="Panel/HBoxContainer/MoneyBoxContainer"]
layout_mode = 2
text = "MONEY: 100"

[node name="FishBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="FishLabel" type="Label" parent="Panel/HBoxContainer/FishBoxContainer"]
layout_mode = 2
text = "FISH: "

[node name="StaminaBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Panel/HBoxContainer/StaminaBoxContainer"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_vertical = 4
step = 1.0
show_percentage = false

[node name="Label" type="Label" parent="Panel/HBoxContainer/StaminaBoxContainer/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "STAMINA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Retry" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -173.0
offset_top = -42.0
offset_right = -10.0
offset_bottom = -11.0
grow_horizontal = 0
grow_vertical = 0
text = "RETRY GENERATION"

[connection signal="pressed" from="Retry" to="." method="_on_retry_pressed"]
